--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,14 @@
+:root {
+    --primary-color: white;
+  }
+
+
 body
 {
     padding: 0;
     margin: auto;
-    color: aqua;
-    background: darkslateblue;
+    color: var(--primary-color);
+    background: grey;
     letter-spacing: 3px;
 
 }
@@ -34,7 +39,7 @@ h1{
     text-align: center;
     padding: .56em;
     margin: .2em;
-    color: aqua;
+    color: var(--primary-color);
 }
 h1:hover{
 
@@ -49,7 +54,7 @@ h2, a{
     text-align: center;
     padding: .56em;
     margin: .2em;
-    color: aquamarine;
+    color: var(--primary-color);
 }
 h2:hover{
 
@@ -64,3 +69,73 @@ a{
     padding:.4em;
 
 }
+button {
+	background-color: orange;
+	color: #fff;
+	font-size: 20px;
+	border: none;
+	margin: .7em auto;
+	padding: 10px 20px;
+	border-radius: 8px;
+	cursor: pointer;
+  }
+  button:hover {
+	background-color:#fff;
+	color: orange;
+	border: 3px solid black;
+  }
+form {
+  max-width: 500px;
+  margin: 0 auto;
+  background-color: transparent;
+  box-shadow: 0 11px 24px rgba(0, 0, 0, 0.2);
+  padding: 6em;
+  align-items: center;
+  align-content: center;
+
+}
+.form-group {
+  margin-bottom: 1em 1em;
+  padding: 1em;
+}
+label {
+  display: block;
+  margin-top: .7em;
+  margin-bottom: .8em;
+  font-size: 22px;
+  letter-spacing: 8px;
+  font-weight: bold;
+}
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="name"],
+textarea {
+width: 100%;
+padding: .71em;
+border-radius: 5px;
+border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+font-size: 20px;
+margin-bottom: 10px;
+background-color: transparent;
+}
+input::placeholder{
+    color: var(--primary-color);
+    letter-spacing: 5px;
+}
+button[type="submit"] {
+background-color: #333;
+color: #fff;
+padding: 10px 20px;
+border: none;
+border-radius: 5px;
+font-size: 22px;
+letter-spacing: 4px;
+cursor: pointer;
+}
+button[type="submit"]:hover {
+  background-color: #fff;
+  color: #333;
+}
+
