--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,12 @@ body
     align-content: center;
     align-items: center;
 }
+.w-60{
+    width:40%;
+}
+.mb-2{
+    margin-bottom: 1em;
+}
 .box-90{
     margin: auto;
     width: 90%;
@@ -95,7 +101,7 @@ form {
 
 }
 .form-group {
-  margin-bottom: 1em 1em;
+  margin-bottom: 2em 2em;
   padding: 1em;
 }
 label {
@@ -138,4 +144,16 @@ button[type="submit"]:hover {
   background-color: #fff;
   color: #333;
 }
+.post-form
+{
+    height: 4em;
+    width: 100%;
+}
+.community{
+    max-width: 80%;
+    margin: 0 auto;
+    background-color: transparent;
+    box-shadow: 0 11px 24px rgba(0, 0, 0, 0.2);
+    padding: 6em;
 
+}
